# onnf

./: .gitignore  CMakeLists.txt  main.cpp
scripts/: generate_onnx.py  parse_onnx.py
src/: CMakeLists.txt  main.cpp
src/Builder/: CMakeLists.txt  FrontendDialectHelper.cpp  FrontendDialectHelper.hpp  FrontendDialectTransformer.cpp  FrontendDialectTransformer.hpp
